--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="./icon/markov-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="./script/main.js"></script>
+    <script defer src="./script/main.js"></script>
   </head>
   <body>
 		<header>
@@ -17,10 +17,9 @@
 			<h3>Тема: ООП</h3>
 			<h3>Выполнил: Марков А.В.</h3>
 			<h5>2022 г.</h5>
-			<br><br><br>
 		</header>
 			<h1>Автомобили</h1>
-		<div class="auto">
+		<div class="car">
 		</div>
 			<h6></h6>
 			
