--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 			<h1>Автомобили</h1>
 		<div class="car">
 		</div>
-			<h6></h6>
+		<footer>
+			<button class="back" onclick="back()">Назад</button>
+			<u>1</u>
+			<button class="next" onclick="next()">Далее</button>
+		</footer>
 			
 			<h4 class="title">Спасибо</h4>
 			<h5>за внимание!</h5>
-			
   </body>
 </html>
