fix big with negative paged

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="car">
 		</div>
 		<footer>
-			<button class="back" onclick="back()">Назад</button>
+			<button class="back not" onclick="back()">Назад</button>
 			<u>1</u>
 			<button class="next" onclick="next()">Далее</button>
 		</footer>
